Bug fixes in the excel controller where there's one report. Lookup reports by name where the name has ampersand in it
git-svn-id: http://192.168.1.10/repos/toto@3371 b53939d4-f08c-4181-96d4-b201aa9c61c4